Pipeline de treinamento completo (faltam testes com bigquery)

--- a/etl_cfg.yaml
+++ b/etl_cfg.yaml
@@ -1,13 +1,17 @@
-input: 
-  features.py: gen_feats
+pub: 
+  pub_alvo.py: gen_pub
+target:
+  target.py: gen_target
+features:
+  features.py: gen_features
 drop:
-  - petal width (cm)
+  - worst fractal dimension
 train_flow: 
-  n_samples: 200000
+  n_samples: 500
   class_balance: 
-    imblearn.under_sampling: ClusterCentroids
+    imblearn.under_sampling: RandomUnderSampler
+target_advance: 1
 score_flow:
   method:
     ParallelScore:
       n_folds: 10
-
