--- a/train_cfg.yaml
+++ b/train_cfg.yaml
@@ -23,6 +23,8 @@ tuning:
     learning_rate: [0.01, 0.5]
   trial.suggest_categorical:
     max_depth: [3,4,5,6,7,8,9,10]
+  trial.suggest_int:
+    min_child_samples: [1000,10000]
 calibration:
   method: sigmoid
   cv: prefit
