--- a/train_cfg.yaml
+++ b/train_cfg.yaml
@@ -3,14 +3,16 @@ train:
   module: LGBMClassifier
   params:
     boosting_type: gbdt
-    n_estimators: 20
+    n_estimators: 200
     max_depth: 5
-    n_jobs: 8
-test_sample_rate: 0.33
+    n_jobs: 20
+    is_unbalance: "true"
+test_sample_rate: 0.20
 tuning:
-  n_trials: 50
+  n_trials: 10
   direction: maximize 
-  sample_rate: 0.33
+  pred_tuning: predict_proba
+  sample_rate: 0.20
   tuning_metric:
     package: sklearn.metrics
     module: roc_auc_score
@@ -22,12 +24,11 @@ tuning:
     subsample: [0.4, 1.0]
     learning_rate: [0.01, 0.5]
   trial.suggest_categorical:
-    max_depth: [3,4,5,6,7,8,9,10]
-  trial.suggest_int:
-    min_child_samples: [1000,10000]
+    max_depth: [3,4,5,6,7,8,9,10,11,12] 
 calibration:
   method: sigmoid
   cv: prefit
-  cal_sample_rate: 0.33
+  cal_sample_rate: 0.5
+#optimize_threshold: True
 report: True
 
