--- a/prep_cfg.yaml
+++ b/prep_cfg.yaml
@@ -16,6 +16,8 @@ categorical:
   - encoder:
     package: category_encoders
     module: TargetEncoder
+    params:
+      smoothing: 0.5
 numerical:
   steps:
   - missing_values_numeric:
@@ -31,7 +33,18 @@ numerical:
 final:
   steps:
     - dim_reduction:
-      package: sklearn.feature_selection
-      module: VarianceThreshold
+      package: boruta
+      module: BorutaPy
       params:
-        threshold: 0.0001
+        estimator:
+          package: lightgbm
+          module: LGBMClassifier
+          params:
+            boosting_type: gbdt
+            n_estimators: 20
+            max_depth: 5
+            n_jobs: 8
+        verbose: 2
+        alpha: 0.01
+        perc: 50
+        max_iter: 100
