--- a/train_cfg.yaml
+++ b/train_cfg.yaml
@@ -3,13 +3,12 @@ train:
   module: LGBMClassifier
   params:
     boosting_type: gbdt
-    n_estimators: 200
+    n_estimators: 2000
     max_depth: 5
-    n_jobs: 20
     is_unbalance: "true"
 test_sample_rate: 0.20
 tuning:
-  n_trials: 10
+  n_trials: 5
   direction: maximize 
   pred_tuning: predict_proba
   sample_rate: 0.20
@@ -17,18 +16,26 @@ tuning:
     package: sklearn.metrics
     module: roc_auc_score
   random_state: 42
-  n_estimators: 200
-  device: cpu
   trial.suggest_loguniform:
+    min_gain_to_split: [0.1,15]
     colsample_bytree: [0.2, 1.0]
     subsample: [0.4, 1.0]
-    learning_rate: [0.01, 0.5]
+    learning_rate: [0.01, 0.3]
+    feature_fraction: [0.5,1]
+    baggin_fraction: [0.5,1]
+    lambda_l1: [0.01,5]
+    lambda_l2: [0.01,5]
   trial.suggest_categorical:
-    max_depth: [3,4,5,6,7,8,9,10,11,12] 
-calibration:
-  method: sigmoid
-  cv: prefit
-  cal_sample_rate: 0.5
+    objective: ['binary','cross_entropy']    
+    max_depth: [2,3,4,5,6,7]
+  trial.suggest_int:
+    min_data_in_leaf: [1000,65000]
+    num_leaves: [8,80]
+#calibration:
+#  method: sigmoid
+#  cv: prefit
+#  cal_sample_rate: 0.33
 #optimize_threshold: True
 report: True
+opt_sample_rate: 0.20
 
