--- a/core/main_cfg.yaml
+++ b/core/main_cfg.yaml
@@ -1,14 +1,12 @@
-model_name: ml_template_test
+model_name: opf-individuals-optin
 labeled: True
 train_test_sample: 0.20
 persist: True
 score:
-  tb_name: opf_optin_propensao.parquet
+  tb_name: meli-bi-data.ML_TBL.TB_PROPENSITY_SCORES
   persist_method: 
-    package: io_ml.io_parquet
-    module: IOParquet
-    params:
-      path: registries/
+    package: io_ml.io_bq
+    module: IO_BQ
 eval:
   tb_name: opf_optin_propensao_eval.parquet
   persist_method: 
