IngAvaliação ingerida pelo BQ

--- a/engine/main_cfg.yaml
+++ b/engine/main_cfg.yaml
@@ -1,19 +1,17 @@
 model_name: opf-sellers-optin
 labeled: True
 train_test_sample: 0.20
-persist: 'while_execution'
+persist: 'always'
 score:
   tb_name: meli-bi-data.ML_TBL.TB_PROPENSITY_SCORES
   persist_method: 
     package: io_ml.io_bq
     module: IO_BQ
 eval:
-  tb_name: opf_optin_propensao_eval.parquet
+  tb_name: meli-bi-data.ML_TBL.TB_PROP_DECIL_EVAL
   persist_method: 
-    package: io_ml.io_parquet
-    module: IOParquet
-    params:
-      path: registries/
+    package: io_ml.io_bq
+    module: IO_BQ
 prod:
   package: io_ml.io_s3
   module: IO_S3
